--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
       <h1>Face a Face</h1>
       <img src="./img/banner.jpg" alt="Participante do retiro" />
     </header>
+    <section id="video">
+  <h2>Assista</h2>
+  <div class="video-container">
+    <iframe 
+      width="100%" 
+      height="500" 
+      src="https://www.youtube.com/embed/PbAoZO-jj9A" 
+      title="YouTube video player" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+      allowfullscreen>
+    </iframe>
+  </div>
+</section>
 
     <!-- Sobre -->
     <section id="sobre">
@@ -279,3 +293,4 @@
     </footer>
   </body>
 </html>
+
